Misc fixes after tests created.
git-svn-id: https://www.linuxalert.org/devcenter/svn/flac-utils/trunk@12 08c137f3-715a-4e21-9c70-c0b73baecca8

--- a/README
+++ b/README
@@ -2,6 +2,8 @@ flac-utils is a toolkit for managing flac-files. It iconsists of two
 parts; a python library built on mutagen and a set of tools using the
 library.
 
+See http://www.linuxalert.org/devcenter/trac/flac-utils for details.
+
 Installation
 ============
 
