--- a/README
+++ b/README
@@ -1,11 +1,14 @@
 flac-utils is a toolkit for managing flac-files. Primary usage is syncing
-metadata between flac file sets. It consists of two parts; a python library
-built on mutagen and a set of tools using the library.
+metadata between flac file sets. 
 
 See http://www.linuxalert.org/devcenter/trac/flac-utils for details.
 
 Installation
 ============
+
+Requires that you have installed the Python module flac_compare to work.
+flac_compare can be found at: https://github.com/mrunesson/flac_compare or packaged for Ubuntu (Debian) at https://launchpad.net/~m-runesson/+archive/unstable
+
 
 For now just go to your checked out copy's tools directory and run the
 tools from there.
