--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+flac-utils (0.2) maverick; urgency=low
+
+  * Fixed packaging
+  * flacCompare is in a separate repo and used via a dependency.
+  * Add manpages
+  * fixing build and tests.
+
+ -- Magnus Runesson <magru@linuxalert.org>  Fri, 25 Mar 2011 19:53:21 +0100
+
 flac-utils (0.1) maverick; urgency=low
 
   * Initial Release.
