--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+flac-utils (0.2.1) maverick; urgency=low
+
+  * Package fix, added build dependency.
+
+ -- Magnus Runesson <magru@linuxalert.org>  Sat, 26 Mar 2011 10:58:25 +0100
+
 flac-utils (0.2) maverick; urgency=low
 
   * Fixed packaging
