--- a/README
+++ b/README
@@ -8,59 +8,25 @@ The utilitiy consist of three tools:
                 differences.
  * flac-merge - Merge metadata from two flac-files.
 
-See http://www.linuxalert.org/devcenter/trac/flac-utils for details.
+See man-pages in doc directory and
+http://www.linuxalert.org/project/flac-utils/ for details.
 
 Installation
 ============
 
-Requires that you have installed the Python module flac_compare to
-work.  flac_compare can be found at:
-https://github.com/mrunesson/flac_compare or packaged for Ubuntu
-(Debian) at https://launchpad.net/~m-runesson/+archive/unstable
+Easiest way to install is to use the Ubuntu/Debian packages. The
+packages can be found at
+https://launchpad.net/~m-runesson/+archive/unstable.
 
-For now just go to your checked out copy's tools directory and run the
-tools from there.
+Git repositories with source are published at github. Git for
+flac_compare: https://github.com/mrunesson/flac_compare and for
+flac-utils: https://github.com/mrunesson/flac-utils To install
+flac_compare run:
 
+python setup.py install
 
-flac-diff
-=========
-flac-diff [-h] [-v] OLDFILE NEWFILE
+flac-utils can be executed directly from its tools directory or
+installed running
 
-Compares two flac files.
+make install
 
-positional arguments:
-  OLDFILE        Flac file used as base line.
-  NEWFILE        Second flac file.
-
-optional arguments:
-  -h, --help     show this help message and exit
-  -v, --verbose  Verbose output.
-
-flac-diff takes two flac files as argument and tells if they differ. Oposite
-to normal diff flac-diff is flac aware. This means it compare the two tracks
-md5 signatures to tell if the music is the same or not. Thereafter compares it
-the tags/comments on the tracks and tells which differs. I.e you can have to
-files with the same track but with different tags. flac-diff will tell you
-which tags differ between the two files.
-
-
-flac-merge
-==========
-flac-merge [-h] [-v] [-b] FILE FILE [DESTFILE]
-
-Merge tags from two flac files.
-
-positional arguments:
-  FILE           Flac file used as base line.
-  DESTFILE       Destination file.
-
-optional arguments:
-  -h, --help     show this help message and exit
-  -v, --verbose  Verbose output.
-  -b, --both     Save all tags to all files. If destination file given, all
-                 three files will get the same tags.
-
-flac-merge take two flac files and merge the tags. It requires that the md5
-signature of the audio part in the files are equal. Values of the second file
-will override the first file. If destination file not provided, result is
-written to the second file.
