--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+flac-utils (0.6.1) precise; urgency=low
+
+  * Include changes.
+
+ -- Magnus Runesson <magru@linuxalert.org>  Fre, 10 Aug 2012 20:21:01 +0200
+
 flac-utils (0.6) precise; urgency=low
 
   * Support for exclude file.
