Note about packages.

--- a/README
+++ b/README
@@ -30,3 +30,7 @@ installed running
 
 make install
 
+Packages
+========
+Ubuntu and debian packages can be found at:
+https://launchpad.net/~m-runesson/+archive/unstable
